# DRF_homework

./: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
courses/: models.py  serializers.py  task.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_picture_alter_lesson_picture_and_more.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_updated_at.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_groups.py  create_user.py  csu.py  load_payments.py
users/migrations/: 0001_initial.py  0002_payments.py
